# ECG_realtime_sim

./: .gitattributes  .gitignore  CMakeLists.txt
ECG/: .gitignore  CMakeLists.txt
ECG/cmake/: compiler_options.cmake
ECG/project/: CMakeLists.txt
ECG/project/ads1115/: CMakeLists.txt
ECG/project/ads1115/include/: ads1115.hpp
ECG/project/ads1115/src/: ads1115.cpp
ECG/project/ads1115/test/: ads1115_test.cpp
ECG/project/ecg/: CMakeLists.txt
ECG/project/ecg/src/: ecg.cpp  ecg_nopp.cpp
ECG/project/ecg/test/: ecg_test.cpp
ECG/src/: circular_buffer.cpp
ECG/test/: ECG_Processing_test.cpp
cmake/: clang_format.cmake
data/: heart_rate.txt
python/: visualisations.ipynb
